# Simple-MCP-Example

./: .gitignore  README.md  app.py  client.py  package-lock.json  package.json  pyproject.toml  server.py
.github/: copilot-instructions.md
src/: index.ts
